[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/GUI/heart.png" type="Texture" id=1]
[ext_resource path="res://GUI.gd" type="Script" id=2]

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
margin_right = 376.0
margin_bottom = 104.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1636.0
margin_bottom = 84.0

[node name="Heart" type="TextureRect" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="Heart2" type="TextureRect" parent="HBoxContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="Heart3" type="TextureRect" parent="HBoxContainer"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="Heart4" type="TextureRect" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="Heart5" type="TextureRect" parent="HBoxContainer"]
margin_left = 272.0
margin_right = 336.0
margin_bottom = 64.0
texture = ExtResource( 1 )
